--- a/Data_preprocessing/Snakefile
+++ b/Data_preprocessing/Snakefile
@@ -9,15 +9,15 @@ import fnmatch
 
 rawData_dir = "./raw_data" # raw sequencing data directory
 processedData_dir = './Processed_data' # processed sequencing data directory
-fastq_ext = '.fq.gz' # fastq file extension
+fastq_ext = '.fastq' # fastq file extension
 
-core = 20 # threads to use
+core = 32 # threads to use
 core_cellRanger = int(core*0.8) # threads to use in cellRanger
 mem = 64 # memory to use in cellRanger
 
 bbduk_dir = "./bbmap/bbduk.sh" # bbduk.sh directory
-cellranger_dir = "./cellranger-atac-1.2.0/cellranger-atac" # cellranger-atac directory
-ref_dir = "./refdata-cellranger-atac-mm10-1.2.0" # reference data directory
+cellranger_dir = "./cellranger-atac-2.1.0/cellranger-atac" # cellranger-atac directory
+ref_dir = "./refdata-cellranger-arc-mm10-2020-A-2.0.0" # reference data directory
 
 ########################################################
 
