Update Snakefile for v2 chemistry.

--- a/Data_preprocessing/Snakefile
+++ b/Data_preprocessing/Snakefile
@@ -1,5 +1,7 @@
-import os
+# modified for v2 Dec 2022
 import fnmatch
+import os
+
 
 ########################################################
 # global varibales
@@ -19,28 +21,31 @@ bbduk_dir = "./bbmap/bbduk.sh" # bbduk.sh directory
 cellranger_dir = "./cellranger-atac-2.1.0/cellranger-atac" # cellranger-atac directory
 ref_dir = "./refdata-cellranger-arc-mm10-2020-A-2.0.0" # reference data directory
 
-########################################################
 
 ########################################################
 # Do not change codes below
 ########################################################
 
 samples = os.listdir(rawData_dir)
-output = [processedData_dir+'/'+sample+'/CellRanger/'+sample+'/outs/fragments.tsv.gz' for sample in samples]
+output = [processedData_dir +
+            '/' + sample + '/CellRanger/' + sample + '/outs/fragments.tsv.gz'
+            for sample in samples]
 
 list_fastq={}
 for sample in samples:
-    list_fastq[sample]=(fnmatch.filter(os.listdir(rawData_dir+'/'+sample), '*1'+fastq_ext)[0].split(".")[0],
-                        fnmatch.filter(os.listdir(rawData_dir+'/'+sample), '*2'+fastq_ext)[0].split(".")[0])
+    list_fastq[sample] = (fnmatch.filter(os.listdir(rawData_dir + '/' + sample),
+                                        '*1' + fastq_ext
+                                        )[0].split(".")[0],
+                        fnmatch.filter(os.listdir(rawData_dir + '/' + sample),
+                                        '*2' + fastq_ext
+                                        )[0].split(".")[0]
+                        )
                         
 # generating folders
-
-for sample in samples:
-    
-    output_dir=processedData_dir+'/'+sample+'/CellRanger'
-    tmp_data=output_dir+'/tmp_data'
-    qc_raw_data=tmp_data+'/qc_raw_data'
-    log_dir=output_dir+'/log'
+    output_dir = processedData_dir + '/' + sample + '/CellRanger'
+    tmp_data = output_dir + '/tmp_data'
+    qc_raw_data = tmp_data + '/qc_raw_data'
+    log_dir = output_dir + '/log'
     
     if not os.path.exists(output_dir):
         os.makedirs(output_dir)
@@ -58,11 +63,23 @@ rule all:
 
 rule filter_L1:
   input:
-    in1 = lambda wildcards: rawData_dir+"/{sample}/"+list_fastq[wildcards.sample][0]+fastq_ext,
-    in2 = lambda wildcards: rawData_dir+"/{sample}/"+list_fastq[wildcards.sample][1]+fastq_ext
+    in1 = (lambda wildcards: rawData_dir +
+            "/{sample}/" +
+            list_fastq[wildcards.sample][0] +
+            fastq_ext
+            ),
+    in2 = (lambda wildcards: rawData_dir +
+            "/{sample}/" +
+            list_fastq[wildcards.sample][1] +
+            fastq_ext
+            )
   output:
-    out1 = processedData_dir + "/{sample}/CellRanger/tmp_data/qc_raw_data/{sample}_raw_qc_linker1_R1.fastq.gz",
-    out2 = processedData_dir + "/{sample}/CellRanger/tmp_data/qc_raw_data/{sample}_raw_qc_linker1_R2.fastq.gz"
+    out1 = (processedData_dir +
+        "/{sample}/CellRanger/tmp_data/qc_raw_data/{sample}_linker1_R1.fastq.gz"
+        ),
+    out2 = (processedData_dir +
+        "/{sample}/CellRanger/tmp_data/qc_raw_data/{sample}_linker1_R2.fastq.gz"
+        )
   shell:
     '''
     {bbduk_dir} \
@@ -70,20 +87,26 @@ rule filter_L1:
     in2={input.in2} \
     outm1={output.out1} \
     outm2={output.out2} \
-    k=34 mm=f rcomp=f restrictleft=85 skipr2=t \
+    k=30 mm=f rcomp=f restrictleft=103 skipr1=t \
     hdist=3 \
     stats={processedData_dir}/{wildcards.sample}/CellRanger/tmp_data/qc_raw_data/{wildcards.sample}_stats.linker1.txt \
     threads={core} \
-    literal=AGATGTGTATAAGAGACAGCATCGGCGTACGACT
+    literal=GTGGCCGATGTTTCGCATCGGCGTACGACT
     '''
     
 rule filter_L2:
   input:
-    in1 = processedData_dir + "/{sample}/CellRanger/tmp_data/qc_raw_data/{sample}_raw_qc_linker1_R1.fastq.gz",
-    in2 = processedData_dir + "/{sample}/CellRanger/tmp_data/qc_raw_data/{sample}_raw_qc_linker1_R2.fastq.gz"
+    in1 = (processedData_dir +
+            "/{sample}/CellRanger/tmp_data/qc_raw_data/{sample}_linker1_R1.fastq.gz"
+            ),
+    in2 = (processedData_dir +
+            "/{sample}/CellRanger/tmp_data/qc_raw_data/{sample}_linker1_R2.fastq.gz"
+            )
   output:
-    out1 = processedData_dir + "/{sample}/CellRanger/tmp_data/qc_raw_data/{sample}_raw_qc_R1.fastq.gz",
-    out2 = processedData_dir + "/{sample}/CellRanger/tmp_data/qc_raw_data/{sample}_raw_qc_R2.fastq.gz"
+    out1 = (processedData_dir +
+            "/{sample}/CellRanger/tmp_data/qc_raw_data/{sample}_raw_qc_R1.fastq.gz"),
+    out2 = (processedData_dir +
+            "/{sample}/CellRanger/tmp_data/qc_raw_data/{sample}_raw_qc_R2.fastq.gz")
   shell:
     '''
     {bbduk_dir} \
@@ -91,7 +114,7 @@ rule filter_L2:
     in2={input.in2} \
     outm1={output.out1} \
     outm2={output.out2} \
-    k=30 mm=f rcomp=f restrictleft=43 skipr2=t \
+    k=30 mm=f rcomp=f restrictleft=65 skipr1=t \
     hdist=3 \
     stats={processedData_dir}/{wildcards.sample}/CellRanger/tmp_data/qc_raw_data/{wildcards.sample}_stats.linker2.txt \
     threads={core} \
@@ -100,20 +123,27 @@ rule filter_L2:
 
 rule bc_process:
   input:
-    processedData_dir + "/{sample}/CellRanger/tmp_data/qc_raw_data/{sample}_raw_qc_R1.fastq.gz"
+    (processedData_dir +
+    "/{sample}/CellRanger/tmp_data/qc_raw_data/{sample}_raw_qc_R2.fastq.gz")
   output:
-    out1 = processedData_dir + "/{sample}/CellRanger/tmp_data/{sample}_S1_L001_R1_001.fastq",
-    out2 = processedData_dir + "/{sample}/CellRanger/tmp_data/{sample}_S1_L001_R2_001.fastq"
+    out1 = (processedData_dir +
+            "/{sample}/CellRanger/tmp_data/{sample}_S1_L001_R3_001.fastq"
+            ),
+    out2 = (processedData_dir +
+            "/{sample}/CellRanger/tmp_data/{sample}_S1_L001_R2_001.fastq"
+            )
   shell:
     '''
-    python BC_process.py --input {input} --output_R1 {output.out1} --output_R2 {output.out2}
+    python BC_process.py --input {input} --output_R3 {output.out1} --output_R2 {output.out2}
     '''
     
-rule R2_rename:
+rule R1_rename:
   input:
-    processedData_dir + "/{sample}/CellRanger/tmp_data/qc_raw_data/{sample}_raw_qc_R2.fastq.gz"
+    (processedData_dir +
+    "/{sample}/CellRanger/tmp_data/qc_raw_data/{sample}_raw_qc_R1.fastq.gz")
   output:
-    processedData_dir + "/{sample}/CellRanger/tmp_data/{sample}_S1_L001_R3_001.fastq.gz"
+    (processedData_dir +
+    "/{sample}/CellRanger/tmp_data/{sample}_S1_L001_R1_001.fastq.gz")
   shell:
     '''
     cp {input} {output}
@@ -128,9 +158,6 @@ rule cell_ranger:
     processedData_dir + "/{sample}/CellRanger/{sample}/outs/fragments.tsv.gz"
   shell:
     '''
-    cd {processedData_dir}/{wildcards.sample}/CellRanger/
-    rm -r {wildcards.sample}
-    
     {cellranger_dir} count \
     --id={wildcards.sample} \
     --reference={ref_dir} \
