--- a/Data_preprocessing/Snakefile
+++ b/Data_preprocessing/Snakefile
@@ -11,7 +11,7 @@ import os
 
 rawData_dir = "./raw_data" # raw sequencing data directory
 processedData_dir = './Processed_data' # processed sequencing data directory
-fastq_ext = '.fastq' # fastq file extension
+fastq_ext = '.fastq.gz' # fastq file extension
 
 core = 32 # threads to use
 core_cellRanger = int(core*0.8) # threads to use in cellRanger
@@ -34,10 +34,10 @@ output = [processedData_dir +
 list_fastq={}
 for sample in samples:
     list_fastq[sample] = (fnmatch.filter(os.listdir(rawData_dir + '/' + sample),
-                                        '*R1' + fastq_ext
+                                        '*1' + fastq_ext
                                         )[0].split(".")[0],
                         fnmatch.filter(os.listdir(rawData_dir + '/' + sample),
-                                        '*R2' + fastq_ext
+                                        '*2' + fastq_ext
                                         )[0].split(".")[0]
                         )
                         
