--- a/Data_preprocessing/Snakefile
+++ b/Data_preprocessing/Snakefile
@@ -2,24 +2,22 @@
 import fnmatch
 import os
 
-
 ########################################################
 # global varibales
 # 1. modify global varibales here
-# 2. modify cluster.json
 ########################################################
 
-rawData_dir = "./raw_data" # raw sequencing data directory
-processedData_dir = './Processed_data' # processed sequencing data directory
+rawData_dir = "raw_data" # raw sequencing data directory
+processedData_dir = 'Processed_data' # processed sequencing data directory
 fastq_ext = '.fastq.gz' # fastq file extension
 
 core = 32 # threads to use
 core_cellRanger = int(core*0.8) # threads to use in cellRanger
 mem = 64 # memory to use in cellRanger
 
-bbduk_dir = "./bbmap/bbduk.sh" # bbduk.sh directory
-cellranger_dir = "./cellranger-atac-2.1.0/cellranger-atac" # cellranger-atac directory
-ref_dir = "./refdata-cellranger-arc-mm10-2020-A-2.0.0" # reference data directory
+bbduk_dir = "bbmap/bbduk.sh" # bbduk.sh directory
+cellranger_dir = "cellranger-atac-2.1.0/cellranger-atac" # cellranger-atac directory
+ref_dir = "refdata-cellranger-arc-mm10-2020-A-2.0.0" # reference data directory
 
 
 ########################################################
