--- a/preprocessing/Snakefile
+++ b/preprocessing/Snakefile
@@ -1,59 +1,49 @@
 # modified for v2 Dec 2022
+
 import fnmatch
 import os
 
 ########################################################
-# global varibales
-# 1. modify global varibales here
+# Modify global varibales here
 ########################################################
 
-rawData_dir = "raw_data" # raw sequencing data directory
-processedData_dir = 'Processed_data' # processed sequencing data directory
+rawData_dir = 'raw_data' # raw sequencing data directory
+processedData_dir = 'processed_data' # processed sequencing data directory
 fastq_ext = '.fastq.gz' # fastq file extension
 
 core = 32 # threads to use
 core_cellRanger = int(core*0.8) # threads to use in cellRanger
 mem = 64 # memory to use in cellRanger
 
-bbduk_dir = "bbmap/bbduk.sh" # bbduk.sh directory
-cellranger_dir = "cellranger-atac-2.1.0/cellranger-atac" # cellranger-atac directory
-ref_dir = "refdata-cellranger-arc-mm10-2020-A-2.0.0" # reference data directory
-
+bbduk_dir = 'bbmap/bbduk.sh'
+cellranger_dir = 'cellranger-atac-2.1.0/cellranger-atac'
+ref_dir = 'refdata-cellranger-arc-mm10-2020-A-2.0.0'
 
 ########################################################
-# Do not change codes below
 ########################################################
 
 samples = os.listdir(rawData_dir)
-output = [processedData_dir +
-            '/' + sample + '/CellRanger/' + sample + '/outs/fragments.tsv.gz'
-            for sample in samples]
+output = [f'{sample}/outs/fragments.tsv.gz' for sample in samples]
 
 list_fastq={}
 for sample in samples:
-    list_fastq[sample] = (fnmatch.filter(os.listdir(rawData_dir + '/' + sample),
-                                        '*1' + fastq_ext
-                                        )[0].split(".")[0],
-                        fnmatch.filter(os.listdir(rawData_dir + '/' + sample),
-                                        '*2' + fastq_ext
-                                        )[0].split(".")[0]
-                        )
-                        
-# generating folders
-    output_dir = processedData_dir + '/' + sample + '/CellRanger'
-    tmp_data = output_dir + '/tmp_data'
-    qc_raw_data = tmp_data + '/qc_raw_data'
-    log_dir = output_dir + '/log'
-    
-    if not os.path.exists(output_dir):
-        os.makedirs(output_dir)
-    if not os.path.exists(tmp_data):
-        os.makedirs(tmp_data)
-    if not os.path.exists(qc_raw_data):
-        os.makedirs(qc_raw_data)
-    if not os.path.exists(log_dir):
-        os.makedirs(log_dir)
 
+    # Make dict of fastq file names {sample : (r1, r2)}
+    list_fastq[sample] = (fnmatch.filter(os.listdir(f'{rawData_dir}/'{sample}),
+                                        f'*1{fastq_ext}')[0], # name of R1
+                        fnmatch.filter(os.listdir(f'{rawData_dir}/'{sample}),
+                                        f'*2{fastq_ext}')[0] # name of R2
+                        )
+
+    # Make working folders
+    working_dir = f'{processedData_dir}/{sample}'
+    qc_data = f'{working_dir}/qc_data'
+    cr_data = f'{working_dir}/cr_data' # Input fastqs for CellRanger
+
+
+    for dir in [working_dir, cr_data, qc_data]:
+        if not os.path.exists(dir):
+            os.makedirs(dir)
 
 rule all:
   input:
@@ -61,23 +51,11 @@ rule all:
 
 rule filter_L1:
   input:
-    in1 = (lambda wildcards: rawData_dir +
-            "/{sample}/" +
-            list_fastq[wildcards.sample][0] +
-            fastq_ext
-            ),
-    in2 = (lambda wildcards: rawData_dir +
-            "/{sample}/" +
-            list_fastq[wildcards.sample][1] +
-            fastq_ext
-            )
+    in1 = lambda wildcards: rawData_dir + '/{sample}/' + list_fastq[wildcards.sample][0],
+    in2 = lambda wildcards: rawData_dir + '/{sample}/' + list_fastq[wildcards.sample][1]
   output:
-    out1 = (processedData_dir +
-        "/{sample}/CellRanger/tmp_data/qc_raw_data/{sample}_linker1_R1.fastq.gz"
-        ),
-    out2 = (processedData_dir +
-        "/{sample}/CellRanger/tmp_data/qc_raw_data/{sample}_linker1_R2.fastq.gz"
-        )
+    out1 = '{qc_data}/{sample}_linker1_R1.fastq.gz',
+    out2 = '{qc_data}/{sample}_linker1_R2.fastq.gz'
   shell:
     '''
     {bbduk_dir} \
@@ -87,24 +65,18 @@ rule filter_L1:
     outm2={output.out2} \
     k=30 mm=f rcomp=f restrictleft=103 skipr1=t \
     hdist=3 \
-    stats={processedData_dir}/{wildcards.sample}/CellRanger/tmp_data/qc_raw_data/{wildcards.sample}_stats.linker1.txt \
+    stats={qc_data}/{wildcards.sample}_stats.linker1.txt \
     threads={core} \
     literal=GTGGCCGATGTTTCGCATCGGCGTACGACT
     '''
-    
+
 rule filter_L2:
   input:
-    in1 = (processedData_dir +
-            "/{sample}/CellRanger/tmp_data/qc_raw_data/{sample}_linker1_R1.fastq.gz"
-            ),
-    in2 = (processedData_dir +
-            "/{sample}/CellRanger/tmp_data/qc_raw_data/{sample}_linker1_R2.fastq.gz"
-            )
+    in1 = '{qc_data}/{sample}_linker1_R1.fastq.gz',
+    in2 = '{qc_data}/{sample}_linker1_R2.fastq.gz'
   output:
-    out1 = (processedData_dir +
-            "/{sample}/CellRanger/tmp_data/qc_raw_data/{sample}_raw_qc_R1.fastq.gz"),
-    out2 = (processedData_dir +
-            "/{sample}/CellRanger/tmp_data/qc_raw_data/{sample}_raw_qc_R2.fastq.gz")
+    out1 = '{cr_data}/{sample}_S1_L001_R1_001.fastq.gz',
+    out2 = '{qc_data}/{sample}_qc_R2.fastq.gz'
   shell:
     '''
     {bbduk_dir} \
@@ -114,52 +86,39 @@ rule filter_L2:
     outm2={output.out2} \
     k=30 mm=f rcomp=f restrictleft=65 skipr1=t \
     hdist=3 \
-    stats={processedData_dir}/{wildcards.sample}/CellRanger/tmp_data/qc_raw_data/{wildcards.sample}_stats.linker2.txt \
+    stats={qc_data}/{wildcards.sample}_stats.linker2.txt \
     threads={core} \
     literal=ATCCACGTGCTTGAGAGGCCAGAGCATTCG
     '''
 
 rule bc_process:
   input:
-    (processedData_dir +
-    "/{sample}/CellRanger/tmp_data/qc_raw_data/{sample}_raw_qc_R2.fastq.gz")
+    '{qc_data}/{sample}_qc_R2.fastq.gz'
   output:
-    out1 = (processedData_dir +
-            "/{sample}/CellRanger/tmp_data/{sample}_S1_L001_R3_001.fastq"
-            ),
-    out2 = (processedData_dir +
-            "/{sample}/CellRanger/tmp_data/{sample}_S1_L001_R2_001.fastq"
-            )
+    out1 = '{cr_data}/{sample}_S1_L001_R3_001.fastq',
+    out2 = '{cr_data}/{sample}_S1_L001_R2_001.fastq'
+
   shell:
     '''
-    python BC_process.py --input {input} --output_R3 {output.out1} --output_R2 {output.out2}
-    '''
-    
-rule R1_rename:
-  input:
-    (processedData_dir +
-    "/{sample}/CellRanger/tmp_data/qc_raw_data/{sample}_raw_qc_R1.fastq.gz")
-  output:
-    (processedData_dir +
-    "/{sample}/CellRanger/tmp_data/{sample}_S1_L001_R1_001.fastq.gz")
-  shell:
-    '''
-    cp {input} {output}
+    python BC_process.py \
+    --input {input} \
+    --output_R3 {output.out1} \
+    --output_R2 {output.out2}
     '''
     
 rule cell_ranger:
   input:
-    in1 = processedData_dir + "/{sample}/CellRanger/tmp_data/{sample}_S1_L001_R1_001.fastq.gz",
-    in2 = processedData_dir + "/{sample}/CellRanger/tmp_data/{sample}_S1_L001_R2_001.fastq",
-    in3 = processedData_dir + "/{sample}/CellRanger/tmp_data/{sample}_S1_L001_R3_001.fastq"
+    in1 = '{cr_data}/{sample}_S1_L001_R1_001.fastq.gz',
+    in2 = '{cr_data}/{sample}_S1_L001_R2_001.fastq',
+    in3 = '{cr_data}/{sample}_S1_L001_R3_001.fastq'
   output:
-    processedData_dir + "/{sample}/CellRanger/{sample}/outs/fragments.tsv.gz"
+    '{sample}/outs/fragments.tsv.gz'
   shell:
     '''
     {cellranger_dir} count \
     --id={wildcards.sample} \
     --reference={ref_dir} \
-    --fastqs={processedData_dir}/{wildcards.sample}/CellRanger/tmp_data \
+    --fastqs={cr_data} \
     --sample={wildcards.sample} \
     --localcores={core_cellRanger} \
     --localmem={mem}
